<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MovieDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctb_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/ToolBar"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="@string/movie_backdrop_images"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:srcCompat="@tools:sample/avatars[0]" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_movie"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/topSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/tv_poster"
                    android:layout_width="130dp"
                    android:layout_height="150dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/poster"
                    tools:srcCompat="@tools:sample/avatars[4]" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_OriginalTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        tools:text="@string/original_title" />

                    <TextView
                        android:id="@+id/tv_ReleaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        tools:text="2019" />

                    <TextView
                        android:id="@+id/tv_Runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        tools:text="Run Time" />

                    <TextView
                        android:id="@+id/tv_voteAverage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="Vote" />
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_SaveFavourite"
                        android:src="@drawable/ic_favorite"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/favourites"
                        android:onClick="saveFavourite"/>
                </LinearLayout>
            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_MovieOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topSection">

                <TextView
                    android:id="@+id/tv_Overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:padding="16dp"
                    tools:text="Desc" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_TrailerHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/trailers"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_MovieOverview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trailer_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_TrailerHeader" />

            <TextView
                android:id="@+id/tv_Review_Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailer_recyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/review_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_Review_Header" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleX="0.10"
        android:scaleY="0.10"
        android:textColor="@color/colorAccent"
        android:visibility="visible" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>